-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.0, Qt Creator 4.12.0
-
None
-
Linux (v3.19.0-15-generic) Kubuntu 15.04 64 bits running on Pentium Dual-core E5700 @ 3.00GHZ with Qt 5.4 toolkit
-
09b69b274daa042911624f7a7d20344f516640fb (qt-creator/qt-creator/qds-1.50)
when trying to change font settings in Qt Creator (font face and font size) and by clicking Apply button, Qt creator crashes at this step.
terminal log:
-
-
- Error in `./qtcreator': free(): invalid pointer: 0x00000000025207c0 ***
Aborted (core dumped)
- Error in `./qtcreator': free(): invalid pointer: 0x00000000025207c0 ***
-
| For Gerrit Dashboard: QTCREATORBUG-14385 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 298865,2 | Debugger: Fix crash after adjusting font size | 4.12 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |